# rust-td

./: Cargo.toml  build.md  build_final.sh  kernel-direct-boot.md  readme.md  rudra.sh  unit_test_coverage.md  unit_test_coverage.sh
.cargo/: config.toml
.github/workflows/: deny.yml  format.yml  main.yml
benchmark/src/: lib.rs
doc/: design.md  tdshim_spec.md  test_in_no_std.md
elf-loader/: Cargo.toml
elf-loader/src/: elf.rs  elf64.rs  lib.rs
fuzzing/fuzz_elf_loader/src/: main.rs
fuzzing/fuzz_pe_loader/src/: main.rs
fw-pci/: Cargo.toml
fw-pci/src/: lib.rs  misc.rs  pci.rs
fw-virtio/: Cargo.toml
fw-virtio/src/: dma.rs  lib.rs  mem.rs  virtqueue.rs
fw-vsock/src/: virtio_vsock_device.rs  vsock.rs
pe-loader/: Cargo.toml
pe-loader/src/: lib.rs  pe.rs
rust-paging/: Cargo.toml
rust-paging/src/: lib.rs  paging.rs
rust-quote-payload/: Cargo.toml  build.rs  build_elf.rs  build_pe.rs  layout.ld  readme.md  target.json
rust-quote-payload/src/: main.rs  platform.rs  virtio_impl.rs  vsock_impl.rs  vsock_lib.rs
rust-td-layout/: Cargo.toml  build.rs
rust-td-layout/etc/: config.json
rust-td-layout/src/: lib.rs
rust-td-payload/: Cargo.toml
rust-td-payload/src/: main.rs
rust-td-payload/src/asm/: mod.rs
rust-td-tool/: Cargo.toml
rust-td-tool/src/: main.rs
rust-tdshim/: Cargo.toml
rust-tdshim/ResetVector/: CommonMacros.inc  Main.asm
rust-tdshim/src/: e820.rs  ipl.rs  main.rs  memory.rs  memslice.rs  mp.rs  tcg.rs
rust-tdshim/src/asm/: mod.rs  switch_stack.s
sh_script/: fuzzing.sh
tdx-exception/src/: idt.rs  interrupt.rs  lib.rs
tdx-logger/: Cargo.toml
tdx-tdcall/: Cargo.toml
tdx-tdcall/src/: lib.rs  tdreport.rs  tdx.rs
uefi-pi/src/: hob_lib.rs
