cargo-features = ["resolver"]
[workspace]

members = ["rust-tdshim", "rust-td-payload", "rust-td-tool"]

default-members = ["rust-tdshim", "rust-td-payload"]
resolver = "2"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
